# mcp-memory

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml
crates/conversation-retrospective/: Cargo.toml  README.md
crates/conversation-retrospective/src/: claude.rs  condense.rs  display.rs  filter.rs  main.rs  memory_extract.rs  parser.rs  state.rs  store.rs  vote.rs
crates/memory-core/: Cargo.toml
crates/memory-core/src/: curation.rs  db.rs  embed.rs  error.rs  lib.rs  memory.rs  scoring.rs  tags.rs  users.rs
crates/memory-server/: Cargo.toml
crates/memory-server/src/: admin.rs  api.rs  auth.rs  config.rs  curation_ui.rs  curation_worker.rs  lib.rs  main.rs  mcp.rs  scheduler.rs
crates/memory-server/tests/: api_test.rs
crates/memory-ui/: Cargo.toml
crates/memory-ui/src/: admin_handlers.rs  handlers.rs  lib.rs  static_files.rs  templates.rs
crates/memory-ui/static/: style.css
crates/memory-ui/templates/: layout.html  login.html  memory_view.html
crates/memory-ui/templates/admin/: layout.html  stats.html  stats_data.html  users.html  users_list.html
crates/memory-ui/templates/curation/: dashboard.html  settings.html
crates/memory-ui/templates/fragments/: card.html  card_edit.html  card_grid.html  curation_indicator.html  curation_runs.html  curation_status.html  curation_suggestions.html  tag_sidebar.html  vote_buttons.html
