[package]
name = "memory-server"
edition.workspace = true
version.workspace = true

[dependencies]
memory-core.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-rusqlite.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
config.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
chrono.workspace = true
anyhow.workspace = true
subtle.workspace = true
memory-ui.workspace = true

[dev-dependencies]
axum-test.workspace = true
